# mildom_dl

./: .gitgnore  .gitignore  README-JA.md  README.md  entry_points.cfg  requirements.txt  setup.cfg  setup.py  test.ipynb
mildom_dl/: __main__.py  command.py  mildomDL.py  mildomDL2.py
mildom_dl/mildom_dl.egg-info/: PKG-INFO  SOURCES.txt
tests/: Untitled.ipynb
