[metadata]
name = mildom_dl
version = 0.0.3
description = "Command-line program to download videos from Mildom.com"
#long_description = file: README.md
#long_description_content_type = text/markdown
author = hirossan4049
license = MIT
license_file = LICENSE
url = https://github.com/NDSlib/mildom-dl

[options]
#package_dir=mildom_dl
packages=find:
scripts = mildom_dl/mildomDL.py
entry_points = file: entry_points.cfg
#install_requires= # パッケージ自身の依存ライブラリ
#        psycopg2~=2.7.6
#        cx_Oracle==5.3
#        sqlalchemy~=1.2.0

#[options.packages.find]
#where=mildom_dl
